2010-07-28  Ryan S. Arnold  <rsa@us.ibm.com>

	* configure: Regenerated.
	* config.log: Removed as unnecessary.
	* configure.ac: --target now works in lieu of --build.  --host is no
	longer necessary.
	* README.developer: Removed directive to use --host and replaced with a
	diective to use --target.

2010-07-26  Ryan S. Arnold  <rsa@us.ibm.com>

	* configure: Regenerated file.
	* Makefile.in: Removed last comments dealing with -mzarch.
	* configure.ac: Removed last fragments dealing with -mzarch.

2010-07-26  Ryan S. Arnold  <rsa@us.ibm.com>

	* ieee754r/isinfd32.c: Removed unnecessary static char buffer used for
	testing.

2010-07-26  Ryan S. Arnold  <rsa@us.ibm.com>

	* ieee754r/isinfd32.c: Removed test-code that shouldn't have been
	checked in.

2010-07-26  Ryan S. Arnold  <rsa@us.ibm.com>

	* ieee754r/isinfd32.c (isinf): Changed Infinity check such that
	DEC_NAN doesn't pass as inf.  There was an incorrect mask check which
	was true for DEC_NAN as well as Inf.
	* tests/test-isfinite.c: Added Conditional expectations for s390 for
	isfinite return values from negative number inputs.


2010-07-23  Ryan S. Arnold  <rsa@us.ibm.com>

	* tests/test-logd.c: Removed unnecessary comments.
	* tests/test-fpclassify.c: Removed unnecessary comments.
	* configure.ac: Removed unnecessary comments.
	* printf_dfp.c: Removed unnecessary comments.


2010-07-23  Ryan S. Arnold  <rsa@us.ibm.com>

	* Makefile.in: Removed commented out code.
	* tests/test-logd.c: Corrected expected values for a _Decimal64 NAN
	declet series.
	* tests/test-fpclassify.c: Added cases for + and -
	__DEC[32|64|128]_SUBNORMAL_MIN__.
	* tests/scaffold.c: Modified spacing in macro output for 'Success'.
	* tests/test-isfinite.c: Corrected expected values for negative
	numbers to return -1.  Corrected expected value for DEC_NAN to '0'.
	* tests/test-strtod.c: Cleaned up.  Still failing.
	* sysdeps/powerpc/dfpu/fpclassifyd32.c (fpclassifyd32): Since