@@ -74,28 +74,28 @@ int __fe_dec_setround(int rounding_direction)
   switch(rounding_direction)
     {
       case FE_DEC_TONEAREST:
-	asm ("mtfsfi 7, 0\n");
+	asm ("mtfsfi 7, 0, 1\n");
 	break;
       case FE_DEC_TOWARDZERO:
-	asm ("mtfsfi 7, 1\n");
+	asm ("mtfsfi 7, 1, 1\n");
 	break;
       case FE_DEC_UPWARD:
-	asm ("mtfsfi 7, 2\n");
+	asm ("mtfsfi 7, 2, 1\n");
 	break;
       case FE_DEC_DOWNWARD:
-	asm ("mtfsfi 7, 3\n");
+	asm ("mtfsfi 7, 3, 1\n");
 	break;
       case FE_DEC_TONEARESTFROMZERO:
-	asm ("mtfsfi 7, 4\n");
+	asm ("mtfsfi 7, 4, 1\n");
 	break;
       case 5: /* Allow covert setting of this rounding mode.  */
-	asm ("mtfsfi 7, 5\n");
+	asm ("mtfsfi 7, 5, 1\n");
 	break;
       case 6: /* Allow covert setting of this rounding mode.  */
-	asm ("mtfsfi 7, 6\n");
+	asm ("mtfsfi 7, 6, 1\n");
 	break;
       case 7: /* Allow covert setting of this rounding mode.  */
-	asm ("mtfsfi 7, 7\n");
+	asm ("mtfsfi 7, 7, 1\n");
 	break;
       default:
 	return 1;
@@ -109,7 +109,10 @@ int __fe_dec_getround(void)
 {
   union {
     double as_double;
-    struct { unsigned int dummy, dummy2: 28, drn:3; };
+    /* Per ISA 2.05 bit 28 of the FPSCR is reserved for future extension of the
+     * FPSCR (DRN) and is therefore ok to read bits 28-31 of the high word with
+     * the mffs.  */
+    struct { unsigned int dummy: 28, drn:4, dummy2; };
   } fpscr;
 
   /* On Power6, read the fpscr into a double union using mffs
